changed portrait photo and fixed project title on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,7 @@ h3 {
 p {
   @apply text-sm sm:text-base lg:text-lg;
 }
+
+.column-count-2 {
+  white-space: initial;
+}
